tests/compile_errors/duplicated-own-namespace.buzz
// The namespace `duplicated\` already exists
namespace duplicated;

import "../utils/duplicate-namespace-1";

test "Should not be able to import sames namespace as current one" {}
